# SecMML

./: .gitignore  CMakeLists.txt  COMPARISON.md  Constant.cpp  Constant.h  Constant_wrapper.cpp  LICENSE  MPL  MPL.py  MPL_lib.i  README.md  constant.json  debug_LSTM.sh  main.cpp  queqiao.py  queqiao_wrapper.cpp
Test/: CMakeLists.txt  README.md  test.cpp  test_Cache  test_Config  test_Config.cpp  test_IOManager  test_IOManager.cpp  test_LSTM  test_LSTM.cpp  test_Mat  test_Mat.cpp  test_SocketManager  test_SocketManager.cpp  test_cache  test_cache.cpp
config/: Config.cpp  Config.hpp  Config_wrapper.cpp
config/json/: CMakeLists.txt
config/parameter/: constant.json  constant1.json
config/test/: CMakeLists.txt  test  test.cpp
core/: Mat.cpp  Mat.h  Mat_wrapper.cpp  MathOp.cpp  MathOp.h  MathOpCore.cpp  NeuronMat.cpp  NeuronMat.h  NeuronMat_wrapper.cpp  Op.cpp  Op.h  Player.cpp  Player.h  Player_wrapper.cpp
datasets/mnist/: README.md  download.py
datasets/test/: mnist_test_testd.bat  mnist_test_testl.bat  mnist_train_traind.bat  mnist_train_trainl.bat  test.bat  test_float.csv  test_int.bat  test_int.csv
machine_learning/: BPGraph.cpp  BPGraph.h  BPGraph_wrapper.cpp  Cell.cpp  Cell.h  Cell_wrapper.cpp  LSTMGraph.cpp  LSTMGraph.h  LSTMGraph_wrapper.cpp  NN.cpp  NN.h  NN_wrapper.cpp
malicious_lib/: feldman_vss.cpp  feldman_vss.h  reed_solomn_reconstruct.cpp  reed_solomn_reconstruct.h
python_lib/: bp_nn.py  linear_regression.py  logistic_regression.py  lstm_nn.py
util/: Cache.cpp  Cache.h  IOManager.cpp  IOManager.h  IOManager_wrapper.cpp  PreCompute.cpp  PreCompute.h  SocketManager.cpp  SocketManager.h  SocketManager_wrapper.cpp  SocketOnline.cpp  SocketOnline.h  run.sh  test  test.cpp
